# keynest

./: .bitrab-ci.yml  .gitignore  .pylintrc  .pylintrc_tests  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  Makefile  README.md  SECURITY.md  mkdocs.yml  private_dictionary.txt  pyproject.toml  tox.ini
.bitrab-ci-scripts/: audit.sh  bandit.sh  check_docs.sh  lint.sh  mypy.sh  pytest.sh
.github/workflows/: publish_to_pypi.yml  release.yml
docs/: aws.md  concepts.md  index.md  installation.md  repositories.md  security.md
docs/extending/: CONTRIBUTING.md
docs/overview/: README.md
docs/usage/: cli.md  gui.md  quickstart.md
keynest/: __about__.py  __init__.py  __main__.py  app.py  cli.py  model.py
keynest/backends/: __init__.py  aws_secrets_manager.py  base.py  keyring_enumerate.py  os_keyring.py  registry.py
keynest/services/: __init__.py  audit.py  aws_policy.py  aws_wizard.py  clipboard.py  codegen.py  diagnostics.py  dotenv_parser.py  index_store.py  maptools.py  quick.py  repo_context.py  repo_tools.py  runner.py  value_tools.py
keynest/ui/: __init__.py  actions_panel.py  aws_wizard.py  dialogs.py  folder_panel.py  geometry.py  main_window.py  quick_dialogs.py  secret_editor.py
scripts/: basic_checks.sh
spec/: spec.md  transparent_relocation.md
tests/: conftest.py  test_aws_backend.py  test_aws_wizard.py  test_cli.py  test_cli_commands.py  test_cli_repo.py  test_diagnostics_backup.py  test_keyring_enumerate.py  test_maptools.py  test_model.py  test_os_keyring_backend.py  test_quick.py  test_repo_context.py  test_repo_tools.py  test_services.py  test_ui_aws_wizard_dialog.py  test_ui_clipboard.py  test_ui_main_window.py  test_ui_panels.py
