[project]
name = "keynest"
version = "0.0.1"
description = "Developer secret workbench: a pure-Python keystore with GUI and CLI for OS keyring and AWS Secrets Manager"
readme = "README.md"
authors = [{ name = "Matthew Martin", email = "matthewdeanmartin@gmail.com" }]
keywords = ["secrets", "keyring", "aws", "secrets-manager", "credentials", "vault", "developer-tools", "cli", "gui", "tkinter"]
license = "MIT"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "keyring>=24.0.0",
    "boto3>=1.34.0",
]

[project.urls]
Repository = "https://github.com/matthewdeanmartin/keynest"
Documentation = "https://keynest.readthedocs.io/en/latest/"
Changelog = "https://github.com/matthewdeanmartin/keynest/blob/main/CHANGELOG.md"
homepage = "https://github.com/matthewdeanmartin/keynest"
issues = "https://github.com/matthewdeanmartin/keynest/issues/"

[project.scripts]
keynest = "keynest.cli:main"
keynest-gui = "keynest.app:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["keynest"]
include = [
    "keynest/**/*.py",
    "keynest/py.typed",
    "/README.md",
    "LICENSE",
]

[tool.hatch.build.targets.sdist]
include = ["/README.md", "LICENSE", "/keynest", "/tests"]

[dependency-groups]
dev = [
    "keepachangelog-manager-fork[all]>=6.5.0",
    "bandit>=1.9.4",
    "black>=26.0.0",
    "isort>=6.0.0",
    "jiggle-version>=2.1.0",
    "codespell>=2.4.1",
    "mdformat>=1.0.0",
    "metametameta>=0.1.5",
    "mypy>=1.18.0",
    "pylint[spelling]>=4.0.0",
    "pytest>=8.4.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-randomly>=3.15.0",
    "pytest-sugar>=0.9.7",
    "pytest-mock>=3.14.0",
    "pytest-timeout>=2.4.0",
    "hypothesis>=6.100.0",
    "ruff>=0.12.0",
    "troml-dev-status>=0.6.0",
    "pre-commit>=4.0.0",
    "pip-audit>=2.7.0",
    "tox>=4.0",
    "tox-uv>=1.0",
    "gha-update>=0.1.0; python_version >= '3.12'",
    "pyyaml>=6.0",
    "yamlfix>=1.19.0",
    "interrogate>=1.5.0",
    "linkcheckmd>=1.4.0",
    "pyenchant>=3.2.2",
    "mkdocs>=1.6.0",
    "mkdocstrings[python]>=0.26.0",
    "git2md>=0.1.0",
    "pyclean>=3.0.0",
    # dead code analysis (advisory)
    "vulture>=2.11",
    "deadcode>=2.4.0",
    # API surface / doc checks
    "griffe>=1.0.0",
    "pydoclint>=0.8.0",
    "pydoctest==0.2.1",
    # advisory / exploratory tools (standalone make targets, not quality gates)
    "refurb>=2.0.0",
    "crosshair-tool>=0.0.80",
    "deptry>=0.20.0",
    "import-linter>=2.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = "-q --timeout=60"
norecursedirs = ["vendor", "scripts", "dist", "build"]
markers = [
    "slow: performance benchmarks (run with -m slow)",
    "integration: integration tests (run with -m integration)",
]
junit_family = "xunit1"

[tool.black]
line-length = 120
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 120
py_version = 311
skip_gitignore = true

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["keynest", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
disallow_any_generics = false
# Tk widget introspection (winfo_children -> Widget) and ad-hoc event-collector
# lists in the GUI tests trip these without adding any real safety.
disable_error_code = ["union-attr", "var-annotated"]

# boto3/botocore ship no type stubs; treat them as untyped third-party modules.
[[tool.mypy.overrides]]
module = ["boto3", "boto3.*", "botocore", "botocore.*"]
ignore_missing_imports = true

# The Tkinter UI layer is thin glue against imperfect stdlib tk stubs
# (e.g. Listbox.curselection is untyped, Toplevel.transient overloads are
# narrow). Relax the strict checks that only those stub gaps trip.
[[tool.mypy.overrides]]
module = "keynest.ui.*"
disallow_untyped_calls = false
warn_return_any = false

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "B",   # bugbear
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "UP",  # pyupgrade
    "SIM", # simplify
    "RUF", # ruff-specific
    "W",   # pycodestyle warnings
]
ignore = [
    "E501",   # line too long (black handles this)
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["B011", "S101"]
# __about__.py is regenerated by metametameta in a meaningful (non-alphabetical)
# order; don't fight it over __all__ sorting.
"keynest/__about__.py" = ["RUF022"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "except ImportError",
    "except ModuleNotFoundError",
    "if 0:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]

# import-linter: define architectural contracts here when you're ready.
# Run `make import-linter` to check them.
# See: https://import-linter.readthedocs.io/
[tool.importlinter]
root_packages = ["keynest"]
# [[tool.importlinter.contracts]]
# name = "keynest does not import from tests"
# type = "forbidden"
# source_modules = ["keynest"]
# forbidden_modules = ["tests"]
